--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
       <div class="city-details">
         <p id="date"></p>
         <div class="row" id="flow-right">
-          <div class="col-sm-6">
+          <div class="col-sm-6" id="weather-temperature">
             <h1></h1>
             <img
               id="icon-temperature"
               src="http://openweathermap.org/img/wn/04d.png" /><span id="temperature"></span>
             <span id="units">
-              <a href="#" id="celsius-link">°C</a> |
+              <a href="#" id="celsius-link" class="active">°C</a> |
               <a href="#" id="fahrenheit-link">°F</a>
             </span>
           </div>
