--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <h1></h1>
             <img
               id="icon-temperature"
-              src="http://openweathermap.org/img/wn/04d.png" /><span id="temperature"></span>
+              src="https://openweathermap.org/img/wn/04d.png" /><span id="temperature"></span>
             <span id="units">
               <a href="#" id="celsius-link" class="active">°C</a> |
               <a href="#" id="fahrenheit-link">°F</a>
@@ -45,58 +45,52 @@
       <div class="city-forecast">
         <div class="row">
           <div class="col-sm-3">
-            <p>SAT</p>
+            <p id="day-1">SAT</p>
           </div>
           <div class="col-sm-3">
-            <p>SUN</p>
+            <p id="day-2">SUN</p>
           </div>
           <div class="col-sm-3">
-            <p>MON</p>
+            <p id="day-3">MON</p>
           </div>
           <div class="col-sm-3">
-            <p>TUE</p>
+            <p id="day-4">TUE</p>
           </div>
         </div>
         <div class="row icon">
           <div class="col-sm-3">
-            <p></p>
+            <p id="weather-forecast-1"></p>
           </div>
           <div class="col-sm-3">
-            <p></p>
+            <p id="weather-forecast-2"></p>
           </div>
           <div class="col-sm-3">
-            <p></p>
+            <p id="weather-forecast-3"></p>
           </div>
           <div class="col-sm-3">
-            <p></p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-sm-3">
-            <p class="icon-forecast"></p>
-          </div>
-          <div class="col-sm-3">
-            <p class="icon-forecast"></p>
-          </div>
-          <div class="col-sm-3">
-            <p class="icon-forecast"></p>
-          </div>
-          <div class="col-sm-3">
-            <p class="icon-forecast"></p>
+            <p id="weather-forecast-4"></p>
           </div>
         </div>
         <div class="row">
           <div class="col-sm-3">
-            <p>-</p>
+            <img
+              id="icon-forecast-1"
+              src="https://openweathermap.org/img/wn/04d.png" />
           </div>
           <div class="col-sm-3">
-            <p>-</p>
+            <img
+              id="icon-forecast-2"
+              src="https://openweathermap.org/img/wn/04d.png" />
           </div>
           <div class="col-sm-3">
-            <p>-</p>
+            <img
+              id="icon-forecast-3"
+              src="https://openweathermap.org/img/wn/04d.png" />
           </div>
           <div class="col-sm-3">
-            <p>-</p>
+            <img
+              id="icon-forecast-4"
+              src="https://openweathermap.org/img/wn/04d.png" />
           </div>
         </div>
       </div>
