--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <button>Search for current location</button>
         </form>
       </div>
-      <div class="city-details">
+     <div class="city-details">
         <p id="date"></p>
         <div class="row" id="flow-right">
           <div class="col-sm-6" id="weather-temperature">
@@ -41,57 +41,8 @@
             </ul>
           </div>
         </div>
-      <br />
       <div class="city-forecast">
-        <div class="row">
-          <div class="col-sm-3">
-            <p id="day-1">SAT</p>
-          </div>
-          <div class="col-sm-3">
-            <p id="day-2">SUN</p>
-          </div>
-          <div class="col-sm-3">
-            <p id="day-3">MON</p>
-          </div>
-          <div class="col-sm-3">
-            <p id="day-4">TUE</p>
-          </div>
-        </div>
-        <div class="row icon">
-          <div class="col-sm-3">
-            <p id="weather-forecast-1"></p>
-          </div>
-          <div class="col-sm-3">
-            <p id="weather-forecast-2"></p>
-          </div>
-          <div class="col-sm-3">
-            <p id="weather-forecast-3"></p>
-          </div>
-          <div class="col-sm-3">
-            <p id="weather-forecast-4"></p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-sm-3">
-            <img
-              id="icon-forecast-1"
-              src="https://openweathermap.org/img/wn/04d.png" />
-          </div>
-          <div class="col-sm-3">
-            <img
-              id="icon-forecast-2"
-              src="https://openweathermap.org/img/wn/04d.png" />
-          </div>
-          <div class="col-sm-3">
-            <img
-              id="icon-forecast-3"
-              src="https://openweathermap.org/img/wn/04d.png" />
-          </div>
-          <div class="col-sm-3">
-            <img
-              id="icon-forecast-4"
-              src="https://openweathermap.org/img/wn/04d.png" />
-          </div>
+        <div class="row" id="weather-forecast">
         </div>
       </div>
     </div>
