--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
           </div>
         </div>
       <div class="city-forecast">
+        <p class="forecast-description"><strong>UPCOMING 4 DAYS</strong></p>
         <div class="row" id="weather-forecast">
         </div>
       </div>
