github link opens in new tab

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </div>
     </div>
   </div>
-  <footer>Made by Alicja Nowak 👧 Click <a href="https://github.com/averlye/Weather-App-Project-2.git">HERE</a> to see full GitHub respiratory</footer>
+  <footer>Made by Alicja Nowak 👧 Click <a href="https://github.com/averlye/Weather-App-Project-2.git" target="blank">HERE</a> to see full GitHub respiratory</footer>
 </body>
 <script src="script.js"></script>
 </html>
